--- a/src/main/resources/templates/admin/profile/profiles.html
+++ b/src/main/resources/templates/admin/profile/profiles.html
@@ -89,7 +89,7 @@
           <a class="btn btn-success" href="/admin/profile/save-form">저장</a>
         </div>
         <div class="home-image-delete">
-          <a class="btn btn-danger" href="">삭제</a>
+          <a class="btn btn-danger" href="/admin/profile/delete-form">삭제</a>
         </div>
       </div>
     </div>
