--- a/src/main/resources/templates/admin/work/works.html
+++ b/src/main/resources/templates/admin/work/works.html
@@ -27,7 +27,7 @@
           <a class="nav-link active" href="/admin/works">Works</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/admin/profile/career">Profile</a>
+          <a class="nav-link" href="/admin/profile">Profile</a>
         </li>
       </ul>
     </div>
