--- a/src/main/resources/templates/admin/homeImage/save.html
+++ b/src/main/resources/templates/admin/homeImage/save.html
@@ -1,7 +1,6 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/header.html :: header}">
-  <title>Hello</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
@@ -20,11 +19,14 @@
           <li class="nav-item">
             <a class="nav-link" href="/admin/works">Works</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/admin/profile">Profile</a>
+          </li>
         </ul>
       </div>
       <div class="home-image-right-wrapper">
         <div class="home-image-saved-list">
-          <h5>현재 저장된 홈 이미지</h5>
+          <h5>현재 저장된 이미지</h5>
           <table class="table table-hover">
             <thead>
             <tr class="table-dark">
@@ -92,8 +94,6 @@
       });
     }, false);
   </script>
-  <script src="/js/bootstrap.js"></script>
   <script src="/js/bootstrap.bundle.js"></script>
-  <script src="/js/bootstrap.esm.js"></script>
 </body>
 </html>
