--- a/src/main/resources/templates/admin/work/delete.html
+++ b/src/main/resources/templates/admin/work/delete.html
@@ -21,7 +21,7 @@
                     <a class="nav-link active" href="/admin/works">Works</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/admin/profile/career">Profile</a>
+                    <a class="nav-link" href="/admin/profile">Profile</a>
                 </li>
             </ul>
         </div>
@@ -67,6 +67,7 @@
                             <table class="table table-hover">
                                 <thead>
                                 <tr class="table-dark">
+                                    <th></th>
                                     <th scope="col">Image</th>
                                     <th scope="col">Title</th>
                                     <th scope="col">WorkDate</th>
