--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -36,7 +36,7 @@
             <a class="nav-link" href="#">Biography</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="/contact">Contact</a>
           </li>
         </ul>
       </div>
