--- a/src/main/resources/static/css/bootstrap.css
+++ b/src/main/resources/static/css/bootstrap.css
@@ -619,6 +619,17 @@ progress {
   transform: translate(-50%, -50%);
 }
 
+.contact-wrapper {
+  position: absolute;
+  width: 35%;
+  height: 73vh;
+  text-align: center;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border: 5px solid black;
+}
+
 .img-explain {
   text-align: center;
 }
@@ -749,6 +760,30 @@ progress {
   padding-bottom: 3%;
   justify-content: right;
   align-items: center;
+}
+
+.admin-contact-wrapper {
+  align-items: center;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  padding-top: 15px;
+  overflow: scroll;
+}
+
+.contact {
+  width: 90%;
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  padding-bottom: 15px;
+  border-bottom: 1px solid rgb(240, 240, 240);
+}
+
+.contact .contact-subject {
+  flex: 1;
+  text-align: left;
 }
 
 .error-text {
