--- a/src/main/resources/static/css/bootstrap.css
+++ b/src/main/resources/static/css/bootstrap.css
@@ -770,6 +770,7 @@ progress {
   gap: 15px;
   padding-top: 15px;
   overflow: scroll;
+  align-items: center;
 }
 
 .contact {
@@ -781,9 +782,49 @@ progress {
   border-bottom: 1px solid rgb(240, 240, 240);
 }
 
+.contact-top {
+  width: 90%;
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  padding: 10px 0;
+  background-color: rgb(240, 240, 240);
+  font-weight: bold;
+}
+
+.contact-top .contact-sender {
+  width: 65px;
+}
+
+.contact-top .contact-email {
+  width: 220px;
+}
+
+.contact-top .contact-subject {
+  flex: 1;
+  text-align: center;
+}
+
+.contact-top .contact-date {
+  width: 150px;
+}
+
+.contact .contact-sender {
+  width: 65px;
+}
+
+.contact .contact-email {
+  width: 220px;
+  text-align: left;
+}
+
 .contact .contact-subject {
   flex: 1;
   text-align: left;
+}
+
+.contact .contact-date {
+  width: 150px;
 }
 
 .error-text {
