--- a/src/main/resources/static/css/bootstrap.css
+++ b/src/main/resources/static/css/bootstrap.css
@@ -782,6 +782,14 @@ progress {
   border-bottom: 1px solid rgb(240, 240, 240);
 }
 
+.read {
+  color: rgb(240, 240, 240);
+}
+
+.not-read {
+  color: black;
+}
+
 .contact-top {
   width: 90%;
   display: flex;
@@ -833,6 +841,17 @@ progress {
 
 .form-group {
   padding: 1% 3%;
+}
+
+.contact-detail {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.contact-detail .contact-detail-sender {
+  display: flex;
+  gap: 20px;
 }
 
 .lead {
