--- a/src/main/resources/templates/admin/profile/save.html
+++ b/src/main/resources/templates/admin/profile/save.html
@@ -22,6 +22,9 @@
                 <li class="nav-item">
                     <a class="nav-link active" href="/admin/profile">Profile</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin/contact">Contact</a>
+                </li>
             </ul>
         </div>
         <div class="home-image-right-wrapper">
