--- a/src/main/resources/templates/admin/work/works.html
+++ b/src/main/resources/templates/admin/work/works.html
@@ -29,6 +29,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/admin/profile">Profile</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/admin/contact">Contact</a>
+        </li>
       </ul>
     </div>
     <div class="home-image-wrapper">
