[feat] : admin homeimages save 화면 재구현

--- a/src/main/resources/static/css/admin/admin-navbar.css
+++ b/src/main/resources/static/css/admin/admin-navbar.css
@@ -29,3 +29,11 @@
     padding: 8px 12px;
     width: 85%;
 }
+
+@media screen and (min-width: 1600px) {
+    .admin-container {
+        margin-top: 16px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
