--- a/src/main/resources/templates/admin/homeImage/homeImages.html
+++ b/src/main/resources/templates/admin/homeImage/homeImages.html
@@ -9,7 +9,7 @@
 <div layout:fragment="admin-content">
     <div class="home-image-content-header">
         <!-- <h3>현재 저장된 홈 이미지 (1)</h3> -->
-        <a href="#none" class="home-image-content-header-save-btn">저장</a>
+        <a href="/admin/home-images/save-form" class="home-image-content-header-save-btn">저장</a>
         <a href="#none" class="home-image-content-header-del-btn">삭제</a>
     </div>
     <div class="divTable minimalistBlack">
@@ -25,7 +25,7 @@
         <div class="divTableBody">
             <div class="divTableRow">
                 <div class="divTableCell del-chk"><input type="checkbox" /></div>
-                <div class="divTableCell home-image"><img src="" /></div>
+                <div class="divTableCell home-image"><img src="/images/test1.jpeg" /></div>
                 <div class="divTableCell home-image-title"></div>
                 <div class="divTableCell home-image-reg-date"></div>
                 <div class="divTableCell home-image-file-name"></div>
