--- a/src/main/resources/templates/fragments/admin-navbar.html
+++ b/src/main/resources/templates/fragments/admin-navbar.html
@@ -4,7 +4,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <div class="admin-container" th:fragment="admin-navbar">
   <div class="admin-navbar">
-    <a href="#none">Home</a>
+    <a href="/admin/home-images" class="admin-home-image-btn">Home</a>
     <a href="#none">Works</a>
     <a href="#none">Biography</a>
     <a href="#none">Contact</a>
