--- a/src/main/resources/templates/admin/homeImage/save.html
+++ b/src/main/resources/templates/admin/homeImage/save.html
@@ -1,102 +1,36 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/header.html :: header}">
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<!DOCTYPE html>
+<html lang="ko"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layouts/admin-default}">
+<head>
+  <link rel="stylesheet" href="/css/admin/homeImages-save.css" />
+  <script src="/js/homeImages-save.js" defer></script>
 </head>
-<body>
-
-  <div>
-    <div th:replace="~{fragments/nav.html :: navFrament}" />
-  </div>
-
-  <div class="home-image-save-container">
-    <div class="home-image-save-wrapper">
-      <div class="left-nav">
-        <ul class="nav nav-pills flex-column">
-          <li class="nav-item">
-            <a class="nav-link active" href="/admin/home-images">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/admin/works">Works</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/admin/profile">Profile</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/admin/contact">Contact</a>
-          </li>
-        </ul>
+<div layout:fragment="admin-content">
+  <form th:action="@{/admin/home-images}" th:object="${request}" method="post" enctype="multipart/form-data" class="home-image-form validation-form" novalidate>
+    <div class="home-image-save-container">
+      <div class="home-image-save-form">
+        <span class="input-label">이미지</span>
+        <div class="home-image-save-file">
+          <span class="home-image-file-name" id="home-image-file-name">파일명</span>
+          <input id="home-image-file" class="form-control" type="file" accept="image/*" th:field="*{homeImage}" required>
+          <label for="home-image-file" class="home-image-file-label"><i class="fa-solid fa-upload"></i></label>
+        </div>
       </div>
-      <div class="home-image-right-wrapper">
-        <div class="home-image-saved-list">
-          <h5>현재 저장된 이미지</h5>
-          <table class="table table-hover">
-            <thead>
-            <tr class="table-dark">
-              <th scope="col">Image</th>
-              <th scope="col">Title</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr class="table-light" th:each="homeImage : ${homeImages}">
-              <td><img th:src="'/admin/home-images/display?fileName='+${homeImage.fileName}" class="img-fluid" style="width: 4rem"></td>
-              <td th:text="${homeImage.title}"></td>
-            </tr>
-            </tbody>
-          </table>
-        </div>
-        <div class="home-image-save-form">
-          <form th:action="@{/admin/home-images}" th:object="${request}" method="post" enctype="multipart/form-data" class="home-image-form validation-form" novalidate>
-            <div class="home-image-save-input">
-              <div class="form-group">
-                <div class="form-home-image">
-                  <label for="formFile" class="form-label mt-4">홈 이미지로 저장할 파일</label>
-                  <input class="form-control" type="file" id="formFile" accept="image/*" th:field="*{homeImage}" required>
-                  <div class="invalid-feedback">
-                    Please select the home-image
-                  </div>
-                </div>
-                <div class="form-home-image-title">
-                  <label class="form-label mt-4">Title</label>
-                  <input type="text" th:field="*{title}" class="form-control" placeholder="Title" required>
-                  <div class="invalid-feedback">
-                    Please write the title
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="home-image-save-btn-wrapper">
-              <div class="home-image-save">
-                <a class="btn btn-secondary" href="/admin/home-images">이전</a>
-              </div>
-              <div class="home-image-delete">
-                <button type="submit" class="btn btn-success home-image-save-btn">저장</button>
-              </div>
-            </div>
-          </form>
-        </div>
+      <div class="home-image-save-title home-image-save-form">
+        <label for="home-image-title" class="input-label">제목</label>
+        <input id="home-image-title" type="text" th:field="*{title}" class="form-control" placeholder="Title" required>
       </div>
     </div>
-  </div>
-
-  <div class="home-footer">ALL IMAGES AND SITE CONTENT © CHOI MYEONGHEON</div>
-
-  <script>
-    window.addEventListener('load', () => {
-      const forms = document.getElementsByClassName('validation-form');
-
-      Array.prototype.filter.call(forms, (form) => {
-        form.addEventListener('submit', function (event) {
-          if (form.checkValidity() === false) {
-            event.preventDefault();
-            event.stopPropagation();
-          }
-
-          form.classList.add('was-validated');
-        }, false);
-      });
-    }, false);
-  </script>
-  <script src="/js/bootstrap.bundle.js"></script>
-</body>
+    <div class="home-image-save-btn-wrapper">
+      <div class="home-image-save">
+        <a class="btn btn-secondary" href="/admin/home-images">이전</a>
+      </div>
+      <div class="home-image-delete">
+        <button type="submit" class="btn btn-success home-image-save-btn">저장</button>
+      </div>
+    </div>
+  </form>
+</div>
 </html>
