--- a/src/main/resources/static/css/reset.css
+++ b/src/main/resources/static/css/reset.css
@@ -9,6 +9,7 @@
     --admin-del-btn-color: rgba(135, 22, 22, 0.921);
     --admin-save-btn-color: rgb(36, 77, 158);
     --input-border-color: #dee2e6;
+    --before-btn-background-color: rgb(128, 128, 128);
 }
 
 body {
