--- a/src/main/resources/static/css/admin/homeImages-save.css
+++ b/src/main/resources/static/css/admin/homeImages-save.css
@@ -77,3 +77,32 @@ input[type="file"] {
     outline: none;
     border: 1px solid rgb(37, 147, 255);
 }
+
+.home-image-save-btn-wrapper {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 10px;
+}
+
+.home-image-save-btn {
+    display: inline-block;
+    padding: 8px 14px;
+    height: 21.5px;
+    line-height: 21.5px;
+    box-sizing: content-box;
+    color: var(--admin-save-btn-color);
+    background-color: var(--background-color);
+    border: 2px solid var(--admin-save-btn-color);
+    border-radius: 6px;
+    font-weight: 500;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+.home-image-save-btn:hover {
+    border: 2px solid var(--admin-save-btn-color);
+    color: #fff;
+    font-weight: 500;
+    background-color: var(--admin-save-btn-color);
+}
